--- a/snatchsolutions/bank-html/index.html
+++ b/snatchsolutions/bank-html/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snatch Bank</title>
     <link rel="icon" href="snake.ico" />
   </head>
   <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
       <h1>Snatch Bank</h1>
 
       <!-- Navigation elements -->
       <nav>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">About</a></li>
           <li><a href="login.html">Login</a></li>
@@ -24,7 +21,6 @@
         </menu>
       </nav>
 
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
       <hr />
     </header>
 
@@ -42,12 +38,11 @@
       <p>Thus, I present Snatch Bank, created to address the limiting issues of competitor solutions, and enable you to manage your finances as intelligently, fluidly, and comfortably as possible.</p>
       <p>I hope you enjoy using this solution as much as I enjoyed creating it.</p>
       <p>-Chase Bledsoe</p>
-      <!-- Insert a picture of snatch and a picture of myself -->
     </main>
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Author Name(s) : Chase Bledsoe</span>
       <br />
       <a href="https://github.com/Chaser2143/SnatchSolutions">GitHub</a>
     </footer>
