--- a/snatchsolutions/bank-html/login.html
+++ b/snatchsolutions/bank-html/login.html
@@ -2,20 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snatch Bank</title>
     <link rel="icon" href="snake.ico" />
   </head>
   <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
       <h1>Snatch Bank</h1>
       <img src="../snatch.png" alt="Our Mascot Snatch!" width="200">
 
       <!-- Navigation elements -->
       <nav>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">About</a></li>
           <li><a href="login.html">Login</a></li>
@@ -25,24 +22,26 @@
         </menu>
       </nav>
 
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
       <hr />
     </header>
 
     <main>
-      <h1>Welcome</h1>
-      <form method="get" action="console.html">
-        <label for="Username">Username</label>
-        <input type="text" id="Username" placeholder="" />
-        <br>
-        <label for="Password">Password</label>
-        <input type="text" id="Password" placeholder="" />
-        <br>
-        <input type="checkbox" id="visibility">
-        <label for="visibility">Display Password</label>
-        <br>
-        <button type="submit">Login</button>
-      </form>
+      <!-- This div is for the login form -->
+      <div>
+        <h1>Welcome</h1>
+        <form method="get" action="console.html">
+          <label for="Username">Username</label>
+          <input type="text" id="Username" placeholder="" />
+          <br>
+          <label for="Password">Password</label>
+          <input type="text" id="Password" placeholder="" />
+          <br>
+          <input type="checkbox" id="visibility">
+          <label for="visibility">Display Password</label>
+          <br>
+          <button type="submit">Login</button>
+        </form>
+      </div>
     </main>
 
     <footer>
