Dog Placeholder for 3rd party service

--- a/snatchsolutions/index.html
+++ b/snatchsolutions/index.html
@@ -39,6 +39,11 @@
       <p>Within software, the only limits are those of my imagination.</p>
       <img src="../snatch.png" alt="Our mascot Snatch" width="200">
       <img src="../me.png" alt="A picture of me!" width="200">
+      <div>
+        <img src ="./dog_placeholder.jfif">
+        <!-- #3rd Party Service Call to get a random picture of a dog, cause I love dogs -->
+        <!-- https://dog.ceo/dog-api/ -->
+      </div>
     </main>
 
     <footer>
