Comments for HTML deploy

--- a/snatchsolutions/console.html
+++ b/snatchsolutions/console.html
@@ -33,6 +33,7 @@
       </div>
 
       <!-- This div is for current budgets -->
+      <!-- All of this will interact with the database -->
       <div>
         <h2>Current Budget</h2>
         <div>
