--- a/snatchsolutions/quickExpense.html
+++ b/snatchsolutions/quickExpense.html
@@ -25,6 +25,7 @@
 
     <main>
       <!-- This div is for the quick expense form -->
+      <!-- This will use a WebSocket to pass data to the DB -->
       <div>
         <h1>Quick Expense</h1>
         <form method="get" action="console.html">
