Nav Bar Added to all html pages

--- a/snatchsolutions/quickExpense.html
+++ b/snatchsolutions/quickExpense.html
@@ -8,6 +8,11 @@
     <link rel="icon" href="snake.ico" />
   </head>
   <body>
+    <style>
+      .hidden {
+        display: none;
+      }
+    </style>
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
