--- a/snatchsolutions/index.html
+++ b/snatchsolutions/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="main.css" />
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,21 +8,27 @@
     <link rel="icon" href="snake.ico" />
   </head>
   <body>
+
     <header>
-      <h1>Snatch Bank</h1>
-
-      <!-- Navigation elements -->
-      <nav>
-        <menu>
-          <li><a href="index.html">About</a></li>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="console.html">Budget Console</a></li>
-          <li><a href="budgetTemplate.html">Create a Budget</a></li>
-          <li><a href="quickExpense.html">Quick Expense</a></li>
-        </menu>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+        <a class="navbar-brand" href="#">Snatch Bank</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="console.html">Budget Console</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-
-      <hr />
     </header>
 
     <main>
@@ -52,5 +59,8 @@
       <br />
       <a href="https://github.com/Chaser2143/SnatchSolutions">GitHub</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </body>
 </html>
