--- a/snatchsolutions/quickExpense.html
+++ b/snatchsolutions/quickExpense.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="content">
       <!-- This div is for the quick expense form -->
       <!-- This will use a WebSocket to pass data to the DB -->
       <div>
@@ -72,11 +72,11 @@
       </div>
     </main>
 
-    <footer>
-      <hr />
-      <span class="text-reset">Author Name(s) : Chase Bledsoe</span>
-      <br />
-      <a href="https://github.com/Chaser2143/SnatchSolutions">GitHub</a>
+    <footer class="d-flex bg-dark p-3 justify-content-between">
+      <span class="footer-content">Author: Chase Bledsoe</span>
+      <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
+        <img src="github-mark/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
+      </a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
