--- a/snatchsolutions/console.html
+++ b/snatchsolutions/console.html
@@ -31,7 +31,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="content">
       <!-- This div is for the "Create a budget" form -->
       <div> 
         <form method="get" action="budgetTemplate.html">
@@ -61,12 +61,13 @@
       </div>
     </main>
 
-    <footer>
-      <hr />
-      <span class="text-reset">Author Name(s) : Chase Bledsoe</span>
-      <br />
-      <a href="https://github.com/Chaser2143/SnatchSolutions">GitHub</a>
+    <footer class="d-flex bg-dark p-3 justify-content-between">
+      <span class="footer-content">Author: Chase Bledsoe</span>
+      <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
+        <img src="github-mark/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
+      </a>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
