--- a/snatchsolutions/index.html
+++ b/snatchsolutions/index.html
@@ -31,7 +31,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="content">
       <h2>About Snatch Solutions</h2>
 
       <h3>Why Snatch Bank?</h3>
@@ -42,7 +42,7 @@
       <p>-Chase Bledsoe</p>
 
       <h3>About Me</h3>
-      <p>My name is Chase Bledsoe! I am a Computer Science Major at Brigham Young University. I love software development because of the creativity and critical thinking it insights.</p>
+      <p>My name is Chase Bledsoe! I am a Computer Science Major at Brigham Young University. I love software development because of the creativity and critical thinking it thrives on.</p>
       <p>Within software, the only limits are those of my imagination.</p>
       <img src="../snatch.png" alt="Our mascot Snatch" width="200">
       <img src="../me.png" alt="A picture of me!" width="200">
@@ -53,12 +53,13 @@
       </div>
     </main>
 
-    <footer>
-      <hr />
-      <span class="text-reset">Author Name(s) : Chase Bledsoe</span>
-      <br />
-      <a href="https://github.com/Chaser2143/SnatchSolutions">GitHub</a>
+    <footer class="d-flex bg-dark p-3 justify-content-between">
+      <span class="footer-content">Author: Chase Bledsoe</span>
+      <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
+        <img src="github-mark/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
+      </a>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
