--- a/snatchsolutions/index.html
+++ b/snatchsolutions/index.html
@@ -11,16 +11,13 @@
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
-        <a class="navbar-brand" href="#">Snatch Bank</a>
+        <a class="navbar-brand" href="index.html">Snatch Bank</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
@@ -31,25 +28,50 @@
       </nav>
     </header>
 
+    <style>
+      .pad-text{
+        padding-left: 7rem;
+        padding-right: 7rem;
+      }
+      .mar-pic{
+        margin-left: 1rem;
+        margin-right: 1rem;
+      }
+
+      @media only screen and (max-width: 469px){
+        .pad-text{
+          padding-left: 1rem;
+          padding-right: 1rem;
+        }
+        .mar-pic{
+          margin-left: 1rem;
+          margin-right: 1rem;
+          width:50%;
+        }
+      }
+    </style>
+
     <main class="content">
-      <h2>About Snatch Solutions</h2>
+      <div class="blockquote text-center">
+        <h1 class="display-4 p-3">About Snatch Solutions</h1>
+        <div class="pad-text">
+          <p>Snatch Bank is the answer to a budgeting conundrum I have run into time and time again.</p>
+          <p>I am a strong proponent of wise money management. However, I have found that existing budgeting solutions do not fit my needs. Some are too intensive, others do not provide me with the customizeability, speed or analytics that I would like.</p>
+          <p>Thus, I present Snatch Bank, created to address the limiting issues of competitor solutions, and enable you to manage your finances as intelligently, fluidly, and comfortably as possible.</p>
+          <p>I hope you enjoy using this solution as much as I enjoyed creating it.</p>
+        </div>
+      </div>
 
-      <h3>Why Snatch Bank?</h3>
-      <p>Snatch Bank is the answer to a budgeting conundrum I have run into time and time again.</p>
-      <p>I am a strong proponent of wise money management. However, I have found that existing budgeting solutions do not fit my needs. Some are too intensive, others do not provide me with the customizeability, speed or analytics that I would like.</p>
-      <p>Thus, I present Snatch Bank, created to address the limiting issues of competitor solutions, and enable you to manage your finances as intelligently, fluidly, and comfortably as possible.</p>
-      <p>I hope you enjoy using this solution as much as I enjoyed creating it.</p>
-      <p>-Chase Bledsoe</p>
-
-      <h3>About Me</h3>
-      <p>My name is Chase Bledsoe! I am a Computer Science Major at Brigham Young University. I love software development because of the creativity and critical thinking it thrives on.</p>
-      <p>Within software, the only limits are those of my imagination.</p>
-      <img src="../snatch.png" alt="Our mascot Snatch" width="200">
-      <img src="../me.png" alt="A picture of me!" width="200">
-      <div>
-        <img src ="./dog_placeholder.jfif">
-        <!-- #3rd Party Service Call to get a random picture of a dog, cause I love dogs -->
-        <!-- https://dog.ceo/dog-api/ -->
+      <div class="blockquote text-center">
+        <h1 class="display-4 p-3">About Me</h1>
+        <div class="pad-text">
+          <p>My name is Chase Bledsoe! I am a Computer Science Major at Brigham Young University.</p>
+          <p>I love software development because of the combination of creativity and critical thinking it allows me to express.</p>
+        </div>
+        <div>
+          <img class="mar-pic" src="./snatch.png" alt="Our mascot Snatch" width="200rem">
+          <img class="mar-pic" src="./me.png" alt="A picture of me!" width="200rem">
+        </div>
       </div>
     </main>
 
