--- a/snatchsolutions/login.html
+++ b/snatchsolutions/login.html
@@ -11,16 +11,13 @@
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
-        <a class="navbar-brand" href="#">Snatch Bank</a>
+        <a class="navbar-brand" href="index.html">Snatch Bank</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
@@ -49,6 +46,11 @@
         </form>
       </div>
     </main>
+
+          <!-- <div>
+        <img src ="./dog_placeholder.jfif">
+        <!-- #3rd Party Service Call to get a random picture of a dog, cause I love dogs -->
+        <!-- https://dog.ceo/dog-api/ -->
 
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
