--- a/snatchsolutions/budgetTemplate.html
+++ b/snatchsolutions/budgetTemplate.html
@@ -98,13 +98,6 @@
 
       <br>
 
-      <style>
-        .flex-inline{
-          display: flex;
-          justify-content: space-between;
-        }
-      </style>
-
       <div>
         <div>
           <div class="flex-inline">
@@ -113,48 +106,39 @@
             <button class="btn btn-light" type="submit">Add Expense</button>
           </form>
           </div>
-          <div class="table-responsive">
-          <table class="table table-hover table-bordered">
-            <thead>
-              <tr>
-                <th scope="col">Expense #</th>
-                <th scope="col">Name</th>
-                <th scope="col">Date</th>
-                <th scope="col">Category</th>
-                <th scope="col">Amount</th>
-                <th scope="col">Notes</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table>
+          <form>
+            <div class="table-responsive">
+              <table class="table table-hover table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col">Expense #</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Amount</th>
+                    <th scope="col">Notes</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td><input type="text"></td>
+                    <td><input type="date"></td>
+                    <td>
+                      <select>
+                        <option>C1</option>
+                        <option>C2</option>
+                    </select>
+                    </td>
+                    <td><input number="text"></td>
+                    <td><input type="text"></td>
+                  </tr>
+                </tbody>
+              </table>
+              </div>
+              <input type="submit" value="Submit">
+            </form>
           </div>
-          <div> 
-      </div>
     </main>
 
     <footer class="d-flex bg-dark p-3 justify-content-between">
