--- a/snatchsolutions/quickExpense.html
+++ b/snatchsolutions/quickExpense.html
@@ -39,19 +39,19 @@
       <div class="text-center">
         <h1>Quick Expense</h1>
         <form>
-          <div class="form-group row">
+          <div class="form-group row justify-content-center">
             <label for="name" class="col-sm-2 col-form-label">Name</label>
             <div class="col-sm-5">
-              <input type="text" class="form-control" id="name" placeholder="Name">
+              <input type="text" class="form-control" id="name" placeholder="Expense Name">
             </div>
           </div>
-          <div class="form-group row">
+          <div class="form-group row justify-content-center">
             <label for="date" class="col-sm-2 col-form-label">Date</label>
             <div class="col-sm-5">
               <input type="date" class="form-control" id="date" placeholder="Password">
             </div>
           </div>
-          <div class="form-group row">
+          <div class="form-group row justify-content-center">
             <label for="category" class="col-sm-2 col-form-label">Category</label>
             <div class="col-sm-5">
             <select class="form-control custom-select" id="category">
@@ -62,13 +62,13 @@
             </select>
           </div>
           </div>
-          <div class="form-group row">
+          <div class="form-group row justify-content-center">
             <label for="amount" class="col-sm-2 col-form-label">Amount</label>
             <div class="col-sm-5">
               <input type="number" class="form-control" id="amount" placeholder="$">
             </div>
           </div>
-          <div class="form-group row">
+          <div class="form-group row justify-content-center">
             <label for="notes" class="col-sm-2 col-form-label">Notes</label>
             <div class="col-sm-5">
               <input type="text" class="form-control" id="notes" placeholder="Notes">
@@ -77,7 +77,7 @@
           
           <br>
 
-          <div class="form-group row">
+          <div class="form-group row justify-content-center">
             <div class="col-sm-5">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
