--- a/snatchsolutions/login.html
+++ b/snatchsolutions/login.html
@@ -7,7 +7,7 @@
     <title>Snatch Bank</title>
     <link rel="icon" href="snake.ico" />
   </head>
-  <body>
+  <body onload="fillHeader()">
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
@@ -32,7 +32,8 @@
       <!-- This div is for the login form -->
       <div>
         <div class="blockquote text-center">
-          <h1 class="display-2 m-3">Welcome</h1>
+          <h1 class="display-2 m-1" id="welcome_greeting">Welcome</h1>
+          <small class="text-muted" id="welcome_language"> </small>
           <!-- API will go here : https://www.greetingsapi.com/ -->
         </div>
         <div>
@@ -68,4 +69,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </body>
+  <script src="main.js"></script>
 </html>
