--- a/snatchsolutions/login.html
+++ b/snatchsolutions/login.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="main.css" />
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snatch Bank</title>
     <link rel="icon" href="snake.ico" />
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
+    <script src="login.js"></script>  
   </head>
   <body onload="fillHeader()">
 
@@ -39,20 +41,20 @@
         <div>
         <form class="mar-form p-2">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="InputEmail">Email address</label>
+            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
           </div>
           <br>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="InputPassword">Password</label>
+            <input type="password" class="form-control" id="InputPassword" placeholder="Password">
           </div>
           <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Remember Me</label>
+            <input type="checkbox" class="form-check-input" id="InputCheck">
+            <label class="form-check-label" for="InputCheck">Remember Me</label>
           </div>
           <br>
-          <button type="submit" class="btn btn-primary">Sign In</button>
+          <button class="btn btn-primary" type="button" onclick=login()>Sign In</button>
         </form>
       </div>
       </div>
@@ -69,5 +71,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </body>
-  <script src="main.js"></script>
 </html>
