--- a/snatchsolutions/quickExpense.html
+++ b/snatchsolutions/quickExpense.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Snatch Bank</title>
     <link rel="icon" href="snake.ico" />
+    <script src="expense.js"></script> 
   </head>
   <body>
     <style>
@@ -52,6 +53,17 @@
             </div>
           </div>
           <div class="form-group row justify-content-center">
+            <label for="category" class="col-sm-2 col-form-label">Budget</label>
+            <div class="col-sm-5">
+            <select class="form-control custom-select" id="budget">
+              <option selected>Choose...</option>
+              <option value="1">B1</option>
+              <option value="2">B2</option>
+              <option value="3">B3</option>
+            </select>
+            </div>
+          </div>
+          <div class="form-group row justify-content-center">
             <label for="category" class="col-sm-2 col-form-label">Category</label>
             <div class="col-sm-5">
             <select class="form-control custom-select" id="category">
@@ -60,7 +72,7 @@
               <option value="2">C2</option>
               <option value="3">C3</option>
             </select>
-          </div>
+            </div>
           </div>
           <div class="form-group row justify-content-center">
             <label for="amount" class="col-sm-2 col-form-label">Amount</label>
@@ -79,7 +91,7 @@
 
           <div class="form-group row justify-content-center">
             <div class="col-sm-5">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="button" class="btn btn-primary" onclick="createExpense()">Submit</button>
             </div>
           </div>
         </form>
