Reworked Project, Simplified

--- a/snatchsolutions/public/login.html
+++ b/snatchsolutions/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snatch Bank</title>
-    <link rel="icon" href="snake.ico" />
+    <link rel="icon" href="assets/snake.ico" />
     <link rel="stylesheet" href="main.css" />
     <script src="main.js"></script>
     <script src="login.js"></script>  
@@ -63,7 +63,7 @@
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
       <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
-        <img src="github-mark/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
+        <img src="assets/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
       </a>
     </footer>
 
