--- a/snatchsolutions/public/quickExpense.html
+++ b/snatchsolutions/public/quickExpense.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Snatch Bank</title>
-    <link rel="icon" href="snake.ico" />
+    <link rel="icon" href="assets/snake.ico" />
     <script src="expense.js"></script> 
   </head>
   <body>
@@ -53,14 +53,9 @@
             </div>
           </div>
           <div class="form-group row justify-content-center">
-            <label for="category" class="col-sm-2 col-form-label">Budget</label>
+            <label for="budget" class="col-sm-2 col-form-label">Budget</label>
             <div class="col-sm-5">
-            <select class="form-control custom-select" id="budget">
-              <option selected>Choose...</option>
-              <option value="1">B1</option>
-              <option value="2">B2</option>
-              <option value="3">B3</option>
-            </select>
+              <input type="number" class="form-control" id="budget" placeholder="Budget #">
             </div>
           </div>
           <div class="form-group row justify-content-center">
@@ -100,7 +95,7 @@
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
       <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
-        <img src="github-mark/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
+        <img src="assets/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
       </a>
     </footer>
 
