--- a/snatchsolutions/public/budgetCreate.html
+++ b/snatchsolutions/public/budgetCreate.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snatch Bank</title>
-    <link rel="icon" href="snake.ico" />
+    <link rel="icon" href="assets/snake.ico" />
+    <script src="budget.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
 
@@ -28,34 +30,51 @@
       </nav>
     </header>
 
-    <main class="content">
-      <div class="blockquote text-center">
-        <h1 class="display-4 p-3">About Snatch Solutions</h1>
-        <div class="pad-text">
-          <p>Snatch Bank is the answer to a budgeting conundrum I have run into time and time again.</p>
-          <p>I am a strong proponent of wise money management. However, I have found that existing budgeting solutions do not fit my needs. Some are too intensive, others do not provide me with the customizeability, speed or analytics that I would like.</p>
-          <p>Thus, I present Snatch Bank, created to address the limiting issues of competitor solutions, and enable you to manage your finances as intelligently, fluidly, and comfortably as possible.</p>
-          <p>I hope you enjoy using this solution as much as I enjoyed creating it.</p>
-        </div>
-      </div>
+    <main class="content pad-text">
+      <div class="text-center">
+        <h1>New Budget</h1>
+        <form>
+          <div class="form-group row justify-content-center">
+            <label for="name" class="col-sm-2 col-form-label">Name</label>
+            <div class="col-sm-5">
+              <input type="text" class="form-control" id="name" placeholder="Budget Name">
+            </div>
+          </div>
+          <div class="form-group row justify-content-center">
+            <label for="date" class="col-sm-2 col-form-label">Date Active</label>
+            <div class="col-sm-5">
+              <input type="date" class="form-control" id="date" placeholder="Password">
+            </div>
+          </div>
+          <div class="form-group row justify-content-center">
+            <label for="amount" class="col-sm-2 col-form-label">Amount In</label>
+            <div class="col-sm-5">
+              <input type="number" class="form-control" id="amount" placeholder="$">
+            </div>
+          </div>
+          <div class="form-group row justify-content-center">
+            <label for="notes" class="col-sm-2 col-form-label">Notes</label>
+            <div class="col-sm-5">
+              <input type="text" class="form-control" id="notes" placeholder="Notes">
+            </div>
+          </div>
+          
+          <br>
 
-      <div class="blockquote text-center">
-        <h1 class="display-4 p-3">About Me</h1>
-        <div class="pad-text">
-          <p>My name is Chase Bledsoe! I am a Computer Science Major at Brigham Young University.</p>
-          <p>I love software development because of the combination of creativity and critical thinking it allows me to express.</p>
-        </div>
-        <div>
-          <img class="mar-pic" src="./snatch.png" alt="Our mascot Snatch" width="200rem">
-          <img class="mar-pic" src="./me.png" alt="A picture of me!" width="200rem">
-        </div>
-      </div>
+          <div class="form-group row justify-content-center">
+            <div class="col-sm-5">
+              <button type="button" class="btn btn-primary" onclick="createBudget()">Submit</button>
+            </div>
+          </div>
+        </form>
     </main>
+          
+
 
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
       <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
-        <img src="github-mark/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
+        <img src="assets/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
       </a>
     </footer>
 
