--- a/snatchsolutions/public/console.html
+++ b/snatchsolutions/public/console.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snatch Bank</title>
-    <link rel="icon" href="snake.ico" />
+    <link rel="icon" href="assets/snake.ico" />
     <script src="budget.js"></script>
   </head>
   <body>
@@ -62,76 +62,17 @@
         </table>
         </div>
         <div> 
-        <button class="btn btn-success" type="button" onclick="createBudget()">Create a Budget</button>
+          <form method="get" action="budgetCreate.html">
+            <button class="btn btn-light" type="submit">Create Budget</button>
+          </form>
         </div>
-      </div>
-
-      <br>
-
-      <!-- This div is for past budgets -->
-      <div>
-        <div>
-          <h1>Past Budgets</h1>
-          <div class="table-responsive">
-          <table class="table table-hover table-bordered">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Date Active</th>
-                <th scope="col">Amount In</th>
-                <th scope="col">Amount Left</th>
-                <th scope="col">Add Expense</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">3</th>
-                <td></td>
-                <td>10/2/2023</td>
-                <td></td>
-                <td></td>
-                <td>
-                  <form method="get" action="quickExpense.html">
-                    <button class="btn btn-light" type="submit">Add Expense</button>
-                  </form>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td></td>
-                <td>9/25/2023</td>
-                <td></td>
-                <td></td>
-                <td>
-                  <form method="get" action="quickExpense.html">
-                    <button class="btn btn-light" type="submit">Add Expense</button>
-                  </form>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">1</th>
-                <td></td>
-                <td>9/18/2023</td>
-                <td></td>
-                <td></td>
-                <td>
-                  <form method="get" action="quickExpense.html">
-                    <button class="btn btn-light" type="submit">Add Expense</button>
-                  </form>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          </div>
-          <div> 
       </div>
     </main>
 
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
       <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
-        <img src="github-mark/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
+        <img src="assets/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
       </a>
     </footer>
 
