Web Socket Placeholder Added

--- a/snatchsolutions/public/console.html
+++ b/snatchsolutions/public/console.html
@@ -7,6 +7,7 @@
     <title>Snatch Bank</title>
     <link rel="icon" href="assets/snake.ico" />
     <script src="budget.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
 
@@ -60,6 +61,7 @@
 
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
+      <span class="footer-content" id="loginWebsocket"></span>
       <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
         <img src="assets/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
       </a>
